# glossa

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
deploy/ansible/: README.md  inventory  playbook.yml
deploy/ansible/group_vars/: all.yml
deploy/macos/: README.md  install-service.sh
deploy/windows/: README.md  install-service.ps1
docs/: README.md  ROADMAP.md  architecture.md  benchmarks.md  connect-to-agents.md  eval-and-training.md  getting-started.md  graph-and-ontology.md  install.md  mcp.md
docs/deploy/: mcp-server.md  service.md
docs/integrations/: zeroclaw.md
docs/superpowers/plans/: 2026-06-23-glossa-v1-foundation.md  2026-06-23-glossa-v2-extractors.md  2026-06-23-glossa-v3-index-ranking.md  2026-06-24-eval-harness.md  2026-06-24-extractor-coverage.md  2026-06-24-glossa-v4-graph.md  2026-06-24-glossa-v5-mcp.md  2026-06-25-fullwiki-measurement.md  2026-06-25-glob-navigation.md  2026-06-25-grep-v1.md  2026-06-25-read-by-number-honest-search.md  2026-06-25-tensorzero-backend.md  2026-06-26-enricher-spike.md  2026-06-26-eval-graph-tools.md  2026-06-26-graph-address-bridge.md  2026-06-26-graph-deterministic-enrichment.md  2026-06-26-image-vision.md  2026-06-26-semantic-enricher.md  2026-06-26-table-aware-extraction.md  2026-06-26-tool-unification.md  2026-06-26-tz-tool-generator.md  2026-06-27-graph-generalization-no-embeddings.md  2026-06-27-tz-optimization-plan.md  2026-06-28-mcp-enterprise-deploy.md  glossa-grep-trigram-research.md
docs/superpowers/specs/: 2026-06-23-kb-file-first-search-design.md  2026-06-23-ontology-examples.md  2026-06-24-eval-harness-design.md  2026-06-24-extractor-coverage-design.md  2026-06-25-fullwiki-eval-design.md  2026-06-25-induction-deduction-graph.md  2026-06-25-tool-contract-redesign-design.md  2026-06-26-graph-address-bridge-design.md  (+6 more)
eval/: Cargo.toml  ontology-support.toml
eval/fixtures/: sample-hotpot-distractor.json  sample-train.json
eval/src/: corpus.rs  dataset.rs  enrich.rs  export_tz.rs  gepa.rs  lib.rs  main.rs  prep.rs  run.rs  score.rs  trace_read.rs  tz.rs
eval/src/backend/: claude.rs  cli.rs  glossa_tools.rs  mock.rs  mod.rs  openai.rs  prompt.rs  qwen.rs  tensorzero.rs
eval/tensorzero/: .env.example  README.md  docker-compose.yml  optimize_dicl.py
eval/tensorzero/config/: tensorzero.toml
eval/tensorzero/config/answer_hotpot/: system.minijinja
eval/tensorzero/config/answer_hotpot_nograph/: system.minijinja
eval/tensorzero/config/constraint_validate/: system.minijinja
eval/tensorzero/config/enrich/: system.minijinja
eval/tensorzero/config/glob/: system.minijinja
eval/tensorzero/config/grep/: system.minijinja
eval/tensorzero/config/read/: system.minijinja
eval/tensorzero/config/search/: system.minijinja
eval/tensorzero/config/select/: system.minijinja
eval/tensorzero/config/tools/: constraint_solve.json  done.json  glob.json  glossary.json  graph_delete.json  graph_update.json  graph_upsert.json  grep.json  index.json  neighbors.json  read.json  search.json
eval/tests/: mock_e2e.rs
scripts/: inspect_graph_paths.py  migrate_graph_paths.py
src/: cli_fmt.rs  extract.rs  glob.rs  graph.rs  grep.rs  index.rs  lib.rs  main.rs  mcp.rs  model.rs  query.rs  read.rs  root.rs  search.rs  tools.rs  trace.rs  tz_export.rs  walk.rs  winsvc.rs
src/extract/: chunk.rs  csv_tsv.rs  html.rs  image.rs  links.rs  markdown.rs  office.rs  pdf.rs  text.rs
src/graph/: agent.rs  build.rs  generalize.rs  io.rs  node_index.rs  ontology.rs  ops.rs  store.rs  traverse.rs
src/grep/: mod.rs  trigram.rs
src/index/: manifest.rs  multilang.rs  store.rs
tests/: cli_it.rs  extractor_coverage.rs  formats_it.rs  graph_it.rs  mcp_it.rs  rank_it.rs  walk_it.rs
tests/fixtures/: README.md  sample.docx  sample_table.docx
(+11 files in other folders)
