[package]
name = "glossa"
version = "0.0.1"
edition = "2021"

[lib]
name = "glossa"
path = "src/lib.rs"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
globset = "0.4"
office_oxide = "0.1"
pdf-extract = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
