[package]
name = "glossa"
version = "0.0.1"
edition = "2021"

[lib]
name = "glossa"
path = "src/lib.rs"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
globset = "0.4"
office_oxide = "0.1"
pdf-extract = "0.10"
tantivy = { version = "0.26", default-features = false, features = ["mmap", "lz4-compression", "stemmer", "stopwords"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-stemmers = "1.2"
redb = "4.1"
postcard = { version = "1", features = ["alloc"] }
lingua = { version = "1.8", default-features = false, features = ["russian", "english"], optional = true }

[features]
default = []
lingua = ["dep:lingua"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
