[package]
name = "glossa"
version = "0.0.1"
edition = "2021"

[lib]
name = "glossa"
path = "src/lib.rs"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
ignore = "0.4"
regex = "1"
globset = "0.4"
office_oxide = "0.1"
oxidize-pdf = "2"
tantivy = { version = "0.26", default-features = false, features = ["mmap", "lz4-compression", "stemmer", "stopwords"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-stemmers = "1.2"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
zip = { version = "8", default-features = false, features = ["deflate"] }
postcard = { version = "1", features = ["alloc"] }
lingua = { version = "1.8", default-features = false, features = ["russian", "english"], optional = true }
rmcp = { version = "1.8", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
schemars = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7"
chardetng = "0.1"
encoding_rs = "0.8"
fs4 = "0.13"

[features]
default = []
lingua = ["dep:lingua"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace]
members = ["eval"]
