[package]
name = "kb-eval"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "kb-eval"
path = "src/main.rs"

[dependencies]
glossa = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
uuid = { version = "1", features = ["v7"] }
bzip2 = "0.4"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
