[package]
name = "kb-eval"
version = "0.1.0"
edition = "2021"

[lib]
name = "kb_eval"
path = "src/lib.rs"

[[bin]]
name = "kb-eval"
path = "src/main.rs"

[[bin]]
name = "kb-train"
path = "src/bin/kb-train.rs"

[dependencies]
glossa = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
uuid = { version = "1", features = ["v7"] }
base64 = "0.22"
bzip2 = "0.4"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
